--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       # - uses: actions/checkout@v1
-      - uses: ./action-a
+      - name: Echo test
+        run: echo "hello world $MY_NAME" 
+        
         with:
           MY_NAME: "Mona"
